# PipelineWelding

./: .env.example  .gitignore  README.md  demo_document_agent.py  demo_reask.py  demo_standard_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: model_config.yaml  welding_standard_agent_config.yaml
data/: MHPWPS-062.docx
frontend/src/: App.vue  style.css
prompts/: welding_document_agent_prompt.md  welding_reask_agent_prompt.md  welding_standard_agent_prompt.md
scripts/: evaluate_predictions.py  generate_eval_predictions.py
src/pipeline_welding/agents/: __init__.py  welding_document_agent.py  welding_reask_agent.py  welding_standard_agent.py
src/pipeline_welding/api/: app.py
src/pipeline_welding/mcp/: external_search_server.py  search_client.py
