[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-welding"
version = "0.1.0"
description = "Welding defect re-ask agent for pipeline welding analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.82.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
