[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-welding"
version = "0.1.0"
description = "Welding defect re-ask agent for pipeline welding analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.60,<0.3.0",
  "langchain-core>=0.3.0,<0.4.0",
  "mcp>=1.9.0,<2.0.0",
  "openai>=1.82.0,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
